# SmartAutoPark

./: .gitignore  README.md  path.txt  pyproject.toml  requirements.txt  ruff_check.py  test.http  test_signals.py  test_simple.py  test_websocket.py
config/: settings.py  urls.py
smartpark/: admin.py  apps.py  barier_control.py  consumers.py  models.py  routing.py  signals.py  urls.py  views.py
smartpark/migrations/: 0001_initial.py  0002_customuser.py  0003_customuser_image.py  0004_cars_delete_bannedplate_and_more.py  0005_alter_customuser_managers_customuser_date_joined_and_more.py  0006_vehicleentry_is_deleted.py  0007_remove_vehicleentry_is_deleted.py
smartpark/templates/: unpaid_entries.html
templates/: cars_management.html  home.html  login.html
