[project]
name = "smartautopark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "channels-redis>=4.2.1",
    "channels[daphne]>=4.2.2",
    "django>=5.2.4",
    "environs>=14.2.0",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
]
